# 2026-autonomous-uav-racing

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  dependencies.lock.md  dependencies.repos
config/autostart/: racing-gazebo-x11.desktop
docker/: Dockerfile  README.md  entrypoint.sh
docs/: architecture.md  bringup.md  nuc-integration.md  simulation-and-camera.md
docs/decisions/: ADR-001-px4-native-ros2-dds.md  ADR-002-reproducible-container-profiles.md
docs/specs/: minimal-offboard-mission.md
ros2_ws/: README.md
ros2_ws/src/racing_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/racing_bringup/launch/: bringup.launch.py  competition_demo.launch.py  hardware.launch.py  offboard_demo.launch.py  simulation.launch.py
ros2_ws/src/racing_bringup/racing_bringup/: hardware_transport.py
ros2_ws/src/racing_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/racing_camera/calibration/: README.md
ros2_ws/src/racing_camera/config/: topic_contract.yaml
ros2_ws/src/racing_description/: CMakeLists.txt  package.xml
ros2_ws/src/racing_description/config/: airframe.rviz
ros2_ws/src/racing_description/launch/: description.launch.py
ros2_ws/src/racing_description/meshes/team_racer/: README.md
ros2_ws/src/racing_description/test/: test_xacro.py
ros2_ws/src/racing_description/urdf/: racing_uav.urdf.xacro
ros2_ws/src/racing_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/racing_px4_control/: CMakeLists.txt  package.xml
ros2_ws/src/racing_px4_control/config/: px4_interface.yaml
ros2_ws/src/racing_px4_control/include/racing_px4_control/: mission_controller.hpp
ros2_ws/src/racing_px4_control/launch/: offboard_mission.launch.py
ros2_ws/src/racing_px4_control/src/: mission_controller.cpp  offboard_mission_node.cpp
ros2_ws/src/racing_px4_control/test/: test_mission_controller.cpp
ros2_ws/src/racing_simulation/: CMakeLists.txt  package.xml
ros2_ws/src/racing_simulation/config/: gazebo_server.config  point_cloud.rviz  simulation.yaml
ros2_ws/src/racing_simulation/launch/: README.md  sitl.launch.py
ros2_ws/src/racing_simulation/models/: README.md
ros2_ws/src/racing_simulation/models/realsense_d435/: ASSET_PROVENANCE.md  model.config  model.sdf
ros2_ws/src/racing_simulation/models/realsense_d435_sensor/: model.config  model.sdf
ros2_ws/src/racing_simulation/models/robocup_obs1_square_gate/: model.config  model.sdf
ros2_ws/src/racing_simulation/models/robocup_obs2_round_gate/: model.config  model.sdf
ros2_ws/src/racing_simulation/models/robocup_obs3_double_gate/: model.config  model.sdf
ros2_ws/src/racing_simulation/models/robocup_obs4_flip_gate/: model.config  model.sdf
ros2_ws/src/racing_simulation/models/robocup_obs5_flag/: model.config  model.sdf
ros2_ws/src/racing_simulation/models/team_racer/: README.md  model.config  model.sdf
ros2_ws/src/racing_simulation/models/team_racer/config/: 4022_gz_team_racer  geometry.yaml  px4_airframe.params
ros2_ws/src/racing_simulation/models/x500_depth/: model.config  model.sdf
ros2_ws/src/racing_simulation/scripts/: install_team_racer_px4.sh  start_px4_sitl.sh
ros2_ws/src/racing_simulation/test/: test_install_team_racer_px4.py  test_launch_contract.py  test_start_px4_sitl.py  test_team_racer_model.py  test_world_contract.py
ros2_ws/src/racing_simulation/tools/robocup_2025/: README.md  course.yaml  fly_known_course.py  score_checker.py  test_fly_known_course.py  test_score_checker.py  vision_obstacle_detector.py
ros2_ws/src/racing_simulation/worlds/: racing_empty.sdf  robocup_2025_baseline.sdf
scripts/: authorize_gazebo_x11.sh  build_workspace.sh  check_hardware_topics.sh  check_nuc_environment.sh  environment.sh  start_ros2_container.sh
tests/: test_environment_baseline.py
