<?xml version="1.0"?>
<package format="3">
  <name>racing_bringup</name>
  <version>0.1.0</version>
  <description>Unified hardware and simulation launch entry points.</description>
  <maintainer email="486rem22@users.noreply.github.com">ZJUT UAV Racing Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>racing_camera</exec_depend>
  <exec_depend>racing_description</exec_depend>
  <exec_depend>racing_perception</exec_depend>
  <exec_depend>racing_px4_control</exec_depend>
  <exec_depend>racing_simulation</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
