<?xml version="1.0"?>
<package format="3">
  <name>racing_px4_control</name>
  <version>0.1.0</version>
  <description>Project boundary for PX4 telemetry and Offboard commands.</description>
  <maintainer email="486rem22@users.noreply.github.com">ZJUT UAV Racing Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
