<?xml version="1.0"?>
<package format="3">
  <name>racing_px4_control</name>
  <version>0.1.0</version>
  <description>Project boundary for PX4 telemetry and Offboard commands.</description>
  <maintainer email="486rem22@users.noreply.github.com">ZJUT UAV Racing Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>px4_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
