<?xml version="1.0"?>
<package format="3">
  <name>racing_simulation</name>
  <version>0.1.0</version>
  <description>PX4 SITL, simulator worlds and virtual sensor configuration.</description>
  <maintainer email="486rem22@users.noreply.github.com">ZJUT UAV Racing Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>racing_description</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
